package dto

type UserDTO struct {
	UserID   int
	UserName string
	Status   int
}
